@@ -38,10 +38,11 @@ Each expression is then translated into English, as shown in the output below:
 
 ```
 % lein repl
-nREPL server started on port 56520 on host 127.0.0.1 - nrepl://127.0.0.1:56520
-REPL-y 0.4.3, nREPL 0.6.0
+OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
+nREPL server started on port 53777 on host 127.0.0.1 - nrepl://127.0.0.1:53777
+REPL-y 0.4.4, nREPL 0.6.0
 Clojure 1.10.1
-OpenJDK 64-Bit Server VM 12.0.1+12
+OpenJDK 64-Bit Server VM 14.0.1+7
     Docs: (doc function-name-here)
           (find-doc "part-of-name-here")
   Source: (source function-name-here)
@@ -49,71 +50,71 @@ OpenJDK 64-Bit Server VM 12.0.1+12
     Exit: Control+D or (exit) or (quit)
  Results: Stored in vars *1, *2, *3, an exception in *e
 
-user=> (do (load "babylon/translate") (babylon.translate/demo))
+user=> (do (load "babylon")(babylon.translate/demo))
 # intensifier adjective; 5 examples:
 ---
-Echt opgevonden.|
-                |Really excited.
-Behoorlijk nieuwsgierig.|
-                        |Quite curious.
-Ongewoon eenzaam.|
-                 |Unusually lonely.
-Erg eigenwijs.|
-              |Very stubborn.
-Echt vies.|
-          |Really dirty.
+Behoorlijk eigenwijs.|
+                     |Quite stubborn.
+Erg verdrietig.|
+               |Very sad.
+Behoorlijk zenuwachtig.|
+                       |Quite nervous.
+Behoorlijk sterk.|
+                 |Quite strong.
+Ongewoon inhalig.|
+                 |Unusually greedy.
 
 # det noun; 5 examples:
 ---
-Jouw meisjes.|
-             |Your girls.
-Uw fiets.|
-         |Your bike.
-Onze ontwikkeling.|
-                  |Our development.
-Onze banen.|
-           |Our jobs.
-De stoel.|
-         |The chair.
+Twalf ontwikkelingen.|
+                     |Twelve developments.
+Die kitten.|
+           |That kitten.
+Die groep.|
+          |That group.
+Uw katten.|
+          |Your cats.
+Mijn druiven.|
+             |My grapes.
 
 # noun verb; 5 examples:
 ---
-Jullie komen.|
-             |You come.
-Jij werkt.|
-          |You work.
+Ontwikkelingen slapen.|
+                      |Developments sleep.
 Corona veroorzaakt.|
                    |Corona causes.
-Zij veroorzaaken.|
-                 |They cause.
-Guus kan.|
-         |Guus can.
+Ontwikkelingen zien.|
+                    |Developments see.
+Corona werkt.|
+             |Corona works.
+Jassen kunnen.|
+              |Coats can.
 
 # det noun | verb; 5 examples:
 ---
-De dagen kunnen.|
-                |The days can.
-Deze katten komen.|
-                  |These cats come.
-Onze heren zien.|
-                |Our gentlemen see.
-Uw ontwikkelingen werken.|
-                         |Your developments work.
-Onze boeken zingen.|
-                   |Our books sing.
+Onze dames moeten.|
+                  |Our ladies must.
+Acht overheden zingen.|
+                      |Eight governments sing.
+Deze heren lezen.|
+                 |These gentlemen read.
+Dat huis bestrijdt.|
+                   |That house overcomes.
+Hun boek uitgeleggt.|
+                    |Their book explains.
 
 # det | adj noun; 5 examples:
 ---
-Deze vieze heren.|
-                 |These dirty gentlemen.
-Hun lieve huizen.|
-                 |Their nice houses.
-Haar zelfverzekerde bedrijven.|
-                              |Her confident businesses.
-Dit verlegene geld.|
-                   |This shy money.
-Geen teleurgesteld thuis.|
-                         |No disappointed home.
+Mijn kleine beschaving.|
+                       |My small civilization.
+Zes stomme handen.|
+                  |Six stupid hands.
+De enge jassen.|
+               |The scary coats.
+Jouw verwarrende feitten.|
+                         |Your confusing facts.
+Geen slimme hand.|
+                 |No smart hand.
 
 # 'een huis'; 1 example:
 ---
@@ -122,8 +123,8 @@ Een huis.|
 
 # 'de grote boeken'; 1 example:
 ---
-De grote boeken.|
-                |The big books.
+Zeven grote boeken.|
+                   |Seven big books.
 
 # 'een heel klein druif'; 1 example:
 ---
@@ -132,138 +133,138 @@ Een heel klein druif.|
 
 # [det [[intensifier adj] noun]]; 5 examples:
 ---
-Geen behoorlijk sterk ernstig vrouw.|
-                                    |No quite strong serious woman.
-Geen behoorlijk inhalig verward kind.|
-                                     |No quite greedy confused child.
-Geen ongewoon ernstig lief boek.|
-                                |No unusually serious nice book.
-Geen heel vies lief land.|
-                         |No very dirty nice country.
-Geen heel verwarrend ongerust geld.|
-                                   |No very confusing anxious money.
+Een echt teleurgesteld ernstig bedrijf.|
+                                       |A really disappointed serious business.
+Geen eigenlijk bedroefd bedroefd haar.|
+                                      |No actually sad sad hair.
+Een ongewoon stom lief vrouw.|
+                             |An unusually stupid nice woman.
+Eén echt stom bedroefd vrouw.|
+                             |One really stupid sad woman.
+Een behoorlijk gierig opgevonden bedrijf.|
+                                         |A quite stingy excited business.
 
 # [det [[intensifier adj] noun]]; 5 examples:
 ---
-De echt kleine verwarrende hand.|
-                                |The really small confusing hand.
-Een ongewoon lief vies feit.|
-                            |An unusually nice dirty fact.
-Ons heel inhalige opgevondene haar.|
-                                   |Our very greedy excited hair.
-Hun ongewoon teleurgestelde ongeruste druif.|
-                                            |Their unusually disappointed anxious grape.
-Mijn echt enge stomme maanden.|
-                              |My really scary stupid months.
+Haar behoorlijk ongeruste zelfverzekerde tafels.|
+                                                |Her quite anxious confident tables.
+Twee ongewoon klein eigenwijze benen.|
+                                     |Two unusually small stubborn legs.
+Zijn behoorlijk vieze verwarde banen.|
+                                     |Its quite dirty confused jobs.
+Haar heel stomme verdrietige been.|
+                                  |Her very stupid sad leg.
+Zeven eigenlijk groot sterke levens.|
+                                    |Seven actually big strong lives.
 
 # 'De heel sterk slimme vrouen zingen'.; 1 example:
 ---
-Zijn heel sterke slimme vrouwen zingen.|
-                                       |Its very strong smart women sing.
+Negen erg sterk slimme vrouwen zingen.|
+                                      |Nine very strong smart women sing.
 
 # [det [intensifier adj | adj noun]] verb; 5 examples:
 ---
-Haar echt opgevondene sterke baby moet.|
-                                       |Her really excited strong baby must.
-Jouw erg grote enge gebeiden zien.|
-                                  |Your very big scary areas see.
-Deze ongewoon ongeruste verdrietige benen kunnen.|
-                                                 |These unusually anxious sad legs can.
-Uw echt oude zelfverzekerde land kan.|
-                                     |Your really old confident country can.
-Ons ongewoon gierige ongeruste gebeid slaapt.|
-                                             |Our unusually stingy anxious area sleeps.
+De eigenlijk enge grote groepen lezen.|
+                                      |The actually scary big groups read.
+Een behoorlijk nieuwsgierig zenuwachtige stoel kan.|
+                                                   |A quite curious nervous chair can.
+Drie echt groot ware feitten uitgeleggen.|
+                                         |Three really big true facts explain.
+Teen eigenlijk inhalig inhalige bedrijven veroorzaaken.|
+                                                       |Ten actually greedy greedy businesses cause.
+Die echt eenzaamme slimme familie kan.|
+                                      |That really lonely smart family can.
 
 # [det | adj noun] verb; 5 examples:
 ---
-Dit ernstige gebeid zingt.|
-                          |This serious area sings.
-De verlegene mannen zingen.|
-                           |The shy men sing.
-Uw vieze honden veroorzaaken.|
-                             |Your dirty dogs cause.
-Zijn stomme druif slaapt.|
-                         |His stupid grape sleeps.
-Zijn ernstige haren zingen.|
-                           |Its serious hairs sing.
+Zijn verwarde been werkt.|
+                         |Its confused leg works.
+Deze inhalige dagen werken.|
+                           |These greedy days work.
+Hun opgevondene moeders komen.|
+                              |Their excited mothers come.
+Vijf sterke jongens werken.|
+                           |Five strong boys work.
+Twalf verlegene dagen bestrijden.|
+                                 |Twelve shy days overcome.
 
 # Sentence with object; 5 examples:
 ---
-Jij ziet haar.|
-              |You see her.
-Corona ziet hun.|
-                |Corona sees them.
-U ziet hem.|
-           |You see him.
-Hij ziet Guus.|
-              |He sees Guus.
-Het ziet u.|
-           |It sees you.
+Vrouwen zien die.|
+                 |Women see them.
+Honden zien heren.|
+                  |Dogs see gentlemen.
+Kittens zien oplossingen.|
+                         |Kittens see solutions.
+Ontwikkelingen zien landen.|
+                           |Developments see countries.
+Hij ziet druiven.|
+                 |He sees grapes.
 
 # Sentence with reflexive object; 5 examples:
 ---
-Wij zien ons.|
-             |We see ourselves.
 Ik zie me.|
           |I see myself.
-Wij zien ons.|
-             |We see ourselves.
-Zij ziet zich.|
-              |She sees herself.
-Jullie zien je.|
-               |You see yourselves.
+U ziet u.|
+         |You see yourself.
+We zien ons.|
+            |We see ourselves.
+Ik zie me.|
+          |I see myself.
+Jij ziet je.|
+            |You see yourself.
 
 # [s np [vp v np]]; 5 examples:
 ---
-Haar zaak veroorzaakt zijn dagen.|
-                                 |Her case causes its days.
-Hun haren uitgeleggen zijn jongens.|
-                                   |Their hairs explain its boys.
-Hun fietsen bestrijden deze huizen.|
-                                   |Their bikes overcome these houses.
-Dat leven bestrijdt zijn meisje.|
-                                |That life overcomes its girl.
-De druiven lezen haar familie.|
-                              |The grapes read her family.
+Mijn thuis uitgeleggt vijf huizen.|
+                                  |My home explains five houses.
+Acht gelden veroorzaaken zijn baby's.|
+                                     |Eight moneys cause its babies.
+Zijn eenzaamheid ziet mijn familie.|
+                                   |Its loneliness sees my family.
+Deze groep ziet negen oplossingen.|
+                                  |This group sees nine solutions.
+Uw families lezen het vrouw.|
+                            |Your families read the woman.
 
 # [s n [vp-modal-te v [vp-te:inf to v]]]; 5 examples:
 ---
-Guus probeert te zingen.|
-                        |Guus tries to sing.
-Wij proberen te uitgeleggen.|
-                            |We try to explain.
-Hij probeert te slapen.|
-                       |He tries to sleep.
-Zij proberen te bestrijden.|
-                           |They try to overcome.
-Jij probeert te veroorzaaken.|
-                             |You try to cause.
+Mannen proberen te bestrijden.|
+                              |Men try to overcome.
+Corona probeert te werken.|
+                          |Corona tries to work.
+Saskia probeert te uitgeleggen.|
+                               |Saskia tries to explain.
+Handen proberen te werken.|
+                          |Hands try to work.
+Guus probeert te lezen.|
+                       |Guus tries to read.
 
 # modals+infinitive; 5 examples:
 ---
-Jouw erg kleine ernstige bedrijf probeert hun ongewoon enge baby's te bestrijden.|
-                                                                                 |Your very small serious business tries to overcome their unusually scary babies.
-Zijn ongewoon zenuwachtige kleine fiets probeert haar behoorlijk eenzaamme baby's te lezen.|
-                                                                                           |His unusually nervous small bike tries to read her quite lonely babies.
-Uw heel lieve oude dames proberen uw behoorlijk eigenwijze moeder te veroorzaaken.|
-                                                                                  |Your very nice old ladies try to cause your quite stubborn mother.
-Zijn echt stomme nieuwsgierige banen proberen jouw ongewoon ernstige jongens te veroorzaaken.|
-                                                                                             |His really stupid curious jobs try to cause your unusually serious boys.
-Die echt nieuwsgierige grote mannen proberen zijn eigenlijk verwarrende ogen te uitgeleggen.|
-                                                                                            |Those really curious big men try to explain his actually confusing eyes.
+Negen echt zelfverzekerd eenzaamme thuizen proberen die heel kleine eenzaamheid te bestrijden.|
+                                                                                              |Nine really confident lonely homes try to overcome that very small loneliness.
+Drie behoorlijk verdrietig opgevondene ogen proberen negen erg teleurgesteld fietsen te zien.|
+                                                                                             |Three quite sad excited eyes try to see nine very disappointed bikes.
+Deze heel eigenwijze grote groep probeert hun echt verlegene groep te zien.|
+                                                                           |This very stubborn big group tries to see their really shy group.
+Zijn eigenlijk inhalige nieuwsgierige levens proberen zijn ongewoon zelfverzekerde fiets te bestrijden.|
+                                                                                                       |His actually greedy curious lives try to overcome his unusually confident bike.
+Geen eigenlijk verdrietig nieuwsgierige man probeert mijn behoorlijk eenzaamme honden te uitgeleggen.|
+                                                                                                     |No actually sad curious man tries to explain my quite lonely dogs.
 
 # using 'kunnen'; 5 examples:
 ---
-Jullie kunnen uitgeleggen.|
-                          |You can explain.
-Hij kan zingen.|
-               |He can sing.
-Jij kunt zingen.|
-                |You can sing.
-We kunnen bestrijden.|
-                     |We can overcome.
-Zij kunnen zien.|
-                |They can see.
+Ontwikkelingen kunnen komen.|
+                            |Developments can come.
+Jassen kunnen bestrijden.|
+                         |Coats can overcome.
+Kittens kunnen bestrijden.|
+                          |Kittens can overcome.
+We kunnen komen.|
+                |We can come.
+Landen kunnen lezen.|
+                    |Countries can read.
 
 # corona sentence from de Krant van de Gemente van Amsterdam; 1 example:
 ---
@@ -272,16 +273,16 @@ Corona moeten wij samen bestrijden.|
 
 # Generalization of the previous:; 5 examples:
 ---
-Guus moeten wij samen zien.|
-                           |We must see Guus together.
-Jou moeten u samen uitgeleggen.|
-                               |You must explain you together.
-Corona moeten jullie samen uitgeleggen.|
-                                       |You must explain Corona together.
-Hem moeten zij samen zien.|
-                          |They must see him together.
-Mij moeten wij samen uitgeleggen.|
-                                 |We must explain me together.
+Beschavingen moeten tafels samen lezen.|
+                                       |Tables must read civilizations together.
+Corona moeten banen samen veroorzaaken.|
+                                       |Jobs must cause Corona together.
+Groepen moeten zij samen zien.|
+                              |They must see groups together.
+Heren moeten plaatsen samen uitgeleggen.|
+                                        |Lots must explain men together.
+Groepen moeten dagen samen zien.|
+                                |Days must see groups together.
 
 21
 user=>
